# beacn-mix-linux-tui

./: .gitignore  50-beacn.rules  Cargo.toml  LICENSE  README.md  beacn-mix.desktop  beacn-mix.service
.github/workflows/: ci.yml
src/: control.rs  gui.rs  levels.rs  main.rs  mix.rs  pw.rs  routing.rs  screen.rs  state.rs  tui.rs
